[tool.poetry]
name = "repl-nix-siteswift"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_siteswift"}]

[tool.poetry.dependencies]
python = "^3.10"
pwinput = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
